--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,9 @@
-<div class="container">
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+    <div class="navbar-nav">
+        <a class="nav-item nav-link" routerLink="/">Home</a>
+    </div>
+</nav>
+<div class="container mt-4">
   <div class="row">
     <div class="col-6">
       <h2>Login</h2>
